deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koyeb-html-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koyeb-html-test
  template:
    metadata:
      labels:
        app: koyeb-html-test
    spec:
      containers:
        - name: koyeb-html-test
          image: docker.io/davoodazarirad/koyeb-html-test:${GITHUB_SHA}
          ports:
            - containerPort: 80
