ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koyeb-html-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - user123.kubs.ir
      secretName: user123-cert-tls
  rules:
    - host: user123.kubs.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: koyeb-html-test-service
                port:
                  number: 80
