koyebtest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: koyebtest-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - koyebtest.kubs.ir
    secretName: koyebtest-cert-tls
  rules:
  - host: koyebtest.kubs.ir
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: koyeb-html-test-service
            port:
              number: 80
